--- a/oriana-quarkus-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/oriana-quarkus-archetype/src/main/resources/archetype-resources/pom.xml
@@ -73,6 +73,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+      <version>0.2.6</version>
+    </dependency>
 
     <!-- Tests -->
     <dependency>
@@ -138,6 +143,7 @@
                 <interfaceOnly>true</interfaceOnly>
                 <useJakartaEe>true</useJakartaEe>
                 <useBeanValidation>true</useBeanValidation>
+                <useSwaggerAnnotations>false</useSwaggerAnnotations>
                 <dateLibrary>java8</dateLibrary>
               </configOptions>
 
@@ -149,6 +155,26 @@
               <cleanupOutput>true</cleanupOutput>
 
               <output>${project.build.directory}/generated-sources/openapi/catalog-api</output>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.6.0</version>
+        <executions>
+          <execution>
+            <id>add-openapi-generated-sources</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${project.build.directory}/generated-sources/openapi/catalog-api/src/gen/java</source>
+              </sources>
             </configuration>
           </execution>
         </executions>
